--- a/Portfolio_fr.html
+++ b/Portfolio_fr.html
@@ -27,10 +27,10 @@
             <li class="nav-item"><a class="nav-link" href="#formations">Formations</a></li>
             <li class="nav-item"><a class="nav-link" href="#experiences">Expériences</a></li>
             <li class="nav-item"><a class="nav-link" href="#contact">Me Contacter</a></li>
-            <li class="nav-item"><a class="nav-link" href="CV.pdf">CV <img src="Icone_Telechargement.png" width="30" height="30" alt=""></a></li>
+            <li class="nav-item"><a class="nav-link" href="docs/CV.pdf">CV <img src="docs/icones/Icone_Telechargement.png" width="30" height="30" alt=""></a></li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="Icone_Globe.png" width="31" height="37" alt=""> FR</a>
+                    <img src="docs/icones/Icone_Globe.png" width="31" height="37" alt=""> FR</a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <li><a class="dropdown-item" href="Portfolio_en.html"> EN</a></li>
                 </ul>
@@ -59,7 +59,7 @@
       <div class="sous_titre">Étudiant en Licence Pro RTAI (Responsable technique d'applications internet)</div>
       
       <div class="col-12 col-md-3 col-lg-3 col-xl-3 photo">
-        <img src="Yacine.jpg" width="392" height="390" alt="Yacine Habbak" class="img-fluid">
+        <img src="docs/icones/Yacine.jpg" width="392" height="390" alt="Yacine Habbak" class="img-fluid">
       </div>
 
       <div class="col-12 col-md-9 col-lg-9 col-xl-9 intro" style="text-align: left;">
@@ -87,62 +87,62 @@
   <h2>Mes Compétences</h2>
     <!-- HTML/CSS Skill -->
     <div class="col-12 col-lg-4 col-xl-4 mb-4" id="comp">
-        <img src="3_etoiles.png" class="img-fluid" alt="">      
+        <img src="docs/icones/3_etoiles.png" class="img-fluid" alt="">      
       <div class="skill">Html / Css</div>
     </div>
     <!-- PHP Skill -->
     <div class="col-12 col-lg-4 col-xl-4 mb-4">
-        <img src="2_etoiles.png" class="img-fluid" alt="">      
+        <img src="docs/icones/2_etoiles.png" class="img-fluid" alt="">      
       <div class="skill">Php</div>
     </div>
     <!-- SQL Skill -->
     <div class="col-12 col-lg-4 col-xl-4 mb-4">
-        <img src="3_etoiles.png" class="img-fluid" alt="">      
+        <img src="docs/icones/3_etoiles.png" class="img-fluid" alt="">      
       <div class="skill">Sql</div>
     </div>
   </div>
-  <div class="separateur"><img src="Separateur.png" alt="" class="img-fluid"></div>
+  <div class="separateur"><img src="docs/icones/Separateur.png" alt="" class="img-fluid"></div>
   <div class="row text-center">
     <!-- JAVA Skill -->
     <div class="col-12 col-lg-4 col-xl-4 mb-4">
-        <img src="3_etoiles.png" class="img-fluid" alt="">      
+        <img src="docs/icones/3_etoiles.png" class="img-fluid" alt="">      
       <div class="skill">Java</div>
     </div>
     <!-- ADA Skill -->
     <div class="col-12 col-lg-4 col-xl-4 mb-4">
-        <img src="2,5_etoiles.png" class="img-fluid" alt="">      
+        <img src="docs/icones/2,5_etoiles.png" class="img-fluid" alt="">      
       <div class="skill">Ada</div>
     </div>
     <!-- C Skill -->
     <div class="col-12 col-lg-4 col-xl-4 mb-4">
-        <img src="2,5_etoiles.png" class="img-fluid" alt="">      
+        <img src="docs/icones/2,5_etoiles.png" class="img-fluid" alt="">      
       <div class="skill">C</div>
     </div>
   </div>
-  <div class="separateur"><img src="Separateur.png" alt="" class="img-fluid"></div>
+  <div class="separateur"><img src="docs/icones/Separateur.png" alt="" class="img-fluid"></div>
   <div class="row text-center">
     <!-- ASSEMBLEUR Skill -->
     <div class="col-12 col-lg-4 col-xl-4 mb-4">
-        <img src="3_etoiles.png" class="img-fluid" alt="">      
+        <img src="docs/icones/3_etoiles.png" class="img-fluid" alt="">      
       <div class="skill">Assembleur</div>
     </div>
     <!-- WEB DESIGN Skill -->
     <div class="col-12 col-lg-4 col-xl-4 mb-4">
-        <img src="1_etoiles.png" class="img-fluid" alt="">      
+        <img src="docs/icones/1_etoiles.png" class="img-fluid" alt="">      
       <div class="skill">Web Design</div>
     </div>
     <!-- MAINTENANCE Skill -->
     <div class="col-12 col-lg-4 col-xl-4 mb-4">
-        <img src="4_etoiles.png" class="img-fluid" alt="">      
+        <img src="docs/icones/4_etoiles.png" class="img-fluid" alt="">      
       <div class="skill">Maintenance</div>
       <div class="skill_desc">Hardware et Software</div>
     </div>
   </div>
-  <div class="separateur"><img src="Separateur.png" alt="" class="img-fluid"></div>
+  <div class="separateur"><img src="docs/icones/Separateur.png" alt="" class="img-fluid"></div>
   <div class="row text-center">
     <!-- Word/Excel Skill -->
     <div class="col-12">
-        <img src="2_etoiles.png" class="img-fluid" alt="">      
+        <img src="docs/icones/2_etoiles.png" class="img-fluid" alt="">      
       <div class="skill">Word / Excel <br><br></div>
     </div>
   </div>
@@ -162,10 +162,10 @@
     </div>
   </div>
   <div class="col-12 col-md-1 col-lg-1 col-xl-1 mb-5">
-      <img src="Separateur_droit.png" alt="" class="desktop-image">
+      <img src="docs/icones/Separateur_droit.png" alt="" class="desktop-image">
   </div>
   <div class="d-block d-md-none col-12 mb-5">
-      <img src="Separateur_bas.png" alt="" class="mobile-image">
+      <img src="docs/icones/Separateur_bas.png" alt="" class="mobile-image">
   </div>
   <div class="col-12 col-md-5 col-lg-5 col-xl-5 mb-5">
     <ul>
@@ -189,11 +189,11 @@
     </div>
   </div>
   <div class="col-12 col-md-1 col-lg-1 col-xl-1 mb-5">
-      <img src="Separateur_droit.png" alt="" class="desktop-image">
+      <img src="docs/icones/Separateur_droit.png" alt="" class="desktop-image">
   </div>
 
   <div class="d-block d-md-none col-12 mb-5">
-      <img src="Separateur_bas.png" alt="" class="mobile-image">
+      <img src="docs/icones/Separateur_bas.png" alt="" class="mobile-image">
   </div>
   <div class="col-12 col-md-5 col-lg-5 col-xl-5 mb-5">
     <ul>
@@ -217,10 +217,10 @@
       </div>
     </div>
     <div class="col-12 col-md-1 col-lg-1 col-xl-1 mb-5">
-        <img src="Separateur_droit.png" alt="" class="desktop-image">
+        <img src="docs/icones/Separateur_droit.png" alt="" class="desktop-image">
     </div>
     <div class="d-block d-md-none col-12 mb-5">
-        <img src="Separateur_bas.png" alt="" class="mobile-image">
+        <img src="docs/icones/Separateur_bas.png" alt="" class="mobile-image">
     </div>
     <div class="col-12 col-md-5 col-lg-5 col-xl-5 mb-5">
       <ul>
@@ -250,13 +250,13 @@
   <div class="row text-center">
     <!-- Francais -->
     <div class="col-6">
-      <img src="FR.png" alt="" width="225" height="150" class="img-drapeau">
+      <img src="docs/icones/FR.png" alt="" width="225" height="150" class="img-drapeau">
       <br><h3>Francais</h3>
       <p>Langue Maternelle</p>
     </div>
     <!-- Anglais -->
     <div class="col-6">
-      <img src="UK.png" alt="" width="225" height="150" class="img-drapeau">
+      <img src="docs/icones/UK.png" alt="" width="225" height="150" class="img-drapeau">
       <br><h3>Anglais</h3>
       <p>Niveau B1</p>
     </div>
@@ -275,10 +275,10 @@
       </div>
     </div>
     <div class="col-12 col-md-1 col-lg-1 col-xl-1 mb-5">
-      <img src="Separateur_droit.png" alt="" class="desktop-image">
+      <img src="docs/icones/Separateur_droit.png" alt="" class="desktop-image">
   </div>
   <div class="d-block d-md-none col-12 mb-5">
-      <img src="Separateur_bas.png" alt="" class="mobile-image">
+      <img src="docs/icones/Separateur_bas.png" alt="" class="mobile-image">
   </div>
     <div class="col-12 col-md-7 col-lg-7 col-xl-7">
       <h3>Création d'une entreprise individuelle (Auto-entrepreneur)</h3>
@@ -301,10 +301,10 @@
       </div>
     </div>
     <div class="col-12 col-md-1 col-lg-1 col-xl-1 mb-5">
-      <img src="Separateur_droit.png" alt="" class="desktop-image">
+      <img src="docs/icones/Separateur_droit.png" alt="" class="desktop-image">
   </div>
   <div class="d-block d-md-none col-12 mb-5">
-      <img src="Separateur_bas.png" alt="" class="mobile-image">
+      <img src="docs/icones/Separateur_bas.png" alt="" class="mobile-image">
   </div>
     <div class="col-12 col-md-7 col-lg-7 col-xl-7">
       <h3>Casino Shop</h3>
@@ -327,10 +327,10 @@
       </div>
     </div>
     <div class="col-12 col-md-1 col-lg-1 col-xl-1 mb-5">
-        <img src="Separateur_droit.png" alt="" class="desktop-image">
+        <img src="docs/icones/Separateur_droit.png" alt="" class="desktop-image">
     </div>
     <div class="d-block d-md-none col-12 mb-5">
-        <img src="Separateur_bas.png" alt="" class="mobile-image">
+        <img src="docs/icones/Separateur_bas.png" alt="" class="mobile-image">
     </div>
     <div class="col-12 col-md-7 col-lg-7 col-xl-7">
       <h3>Casino Shop</h3>
@@ -369,8 +369,8 @@
       </form>
     </div>
     <div class="col-12 col-lg-6 col-xl-6 mb-5 milieu">
-      <a class="nav-link reseau" href="CV.pdf"><img src="Icone_Telechargement.png" width="30" height="30" alt=""> Téléchargez ici mon CV</a>
-      <a class="nav-link reseau" href="https://twitter.com/YacineHabbak"><img id="twitter" src="Twitter.jpg" width="30" height="30" alt=""> @YacineHabbak</a>
+      <a class="nav-link reseau" href="docs/CV.pdf"><img src="docs/icones/Icone_Telechargement.png" width="30" height="30" alt=""> Téléchargez ici mon CV</a>
+      <a class="nav-link reseau" href="https://twitter.com/YacineHabbak"><img id="twitter" src="docs/icones/Twitter.jpg" width="30" height="30" alt=""> @YacineHabbak</a>
     </div>
   </div>
 </div>
